Compilation errors have been bypassed.